# Gem

./: .editorconfig  .gitattributes  .gitignore  .gitmodules  .travis.yml  AUTHORS  COPYING.txt  ChangeLog  GEM.LICENSE.TERMS  GEM.README  GEM_INSTALL.bat  GEM_INSTALL.sh  GEM_RELUNIX.sh  GEM_darwin.pbproj.sit  Gem-meta.pd.in  Gem.pc.in  GnuGPL.LICENSE.txt  Makefile  Makefile.am  NEWS.txt  README.deken.pd.in  README.md  README.txt  REUSE.toml  TODO  autogen.sh  configure  configure.ac  devgem.sh.in  switch-gemwin.sh.in  systeminfo.sh
extra/: .gitignore  Makefile.am  configure.ac
extra/pix_artoolkit/: .gitignore  Make.config.in  Makefile  Makefile.am  configure.ac  pix_artoolkit-help.pd  pix_artoolkit.cpp  pix_artoolkit.h  pix_artoolkit.vcproj
extra/pix_drum/: LICENSE.txt  Makefile.am  pix_drum-help.pd  pix_drum.cpp  pix_drum.h
extra/pix_fiducialtrack/: COPYING.txt  Makefile.am  default_trees.h  fidtrackX.c  fidtrackX.h  floatpoint.h  libfidtrack_fidtrackX.cpp  pix_fiducialtrack-help.pd  pix_fiducialtrack.cpp  pix_fiducialtrack.h  pix_fiducialtrack.vcproj  segment.c  segment.h  treeidmap.cpp  treeidmap.h
extra/pix_hit/: LICENSE.txt  Makefile.am  TODO  pix_hit-help.pd  pix_hit.cpp  pix_hit.h
extra/pix_mano/: LICENSE.txt  Makefile.am  pix_mano-help.pd  pix_mano.cpp  pix_mano.h
plugins/: Makefile.am  README.org  symlink_ltlib.mk
plugins/ASSIMP2/: ASSIMP2-modelplugin.pd  Makefile.am  README.txt  modelASSIMP2.cpp  modelASSIMP2.h
plugins/ASSIMP3/: ASSIMP3-modelplugin.pd  Makefile.am  modelASSIMP3.cpp  modelASSIMP3.h
plugins/AVI/: Makefile.am  filmAVI.cpp  filmAVI.h
plugins/AVIPLAY/: filmAVIPLAY.cpp  filmAVIPLAY.h
plugins/AVT/: configure.ac  videoAVT.cpp  videoAVT.h
plugins/DC1394/: videoDC1394.cpp  videoDC1394.h
plugins/DECKLINK/: Makefile.am  decklink-recordplugin.pd  decklink-videoplugin.pd  decklink_common.h  libDeckLinkAPIDispatch.cpp  libDeckLinkAPI_i.c  recordDECKLINK.cpp  recordDECKLINK.h  videoDECKLINK.cpp  videoDECKLINK.h
plugins/DV4L/: Makefile.am  videoDV4L.cpp  videoDV4L.h
plugins/FFMPEG/: Makefile.am  filmFFMPEG.cpp  filmFFMPEG.h
plugins/GMERLIN/: filmGMERLIN.cpp  filmGMERLIN.h
plugins/HALCON/: .gitignore  Makefile.am  configure.ac  halcon.m4  videoHALCON.cpp  videoHALCON.h
plugins/JPEG/: Makefile.am  imageJPEG.cpp  imageJPEG.h  jpeg-imageloaderplugin.pd  jpeg-imagesaverplugin.pd
plugins/MPEG1/: Makefile.am  filmMPEG1.cpp  filmMPEG1.h
plugins/MPEG3/: Makefile.am  filmMPEG3.cpp  filmMPEG3.h
plugins/NDI/: LICENSE.txt  Makefile.am  NDI-recordplugin.pd  NDI-videoplugin.pd  README.txt  configure.ac  init_ndi_library.hh  ndi-videoplugin.pd  recordNDI.cpp  recordNDI.h  videoNDI.cpp  videoNDI.h
plugins/OptiTrack/: Makefile.am  videoOptiTrack.cpp  videoOptiTrack.h
plugins/PIPEWIRE/: Makefile.am  pipewire-recordplugin.pd  pipewire-videoplugin.pd  recordPIPEWIRE.cpp  recordPIPEWIRE.h  videoPIPEWIRE.cpp  videoPIPEWIRE.h
plugins/PNM/: Makefile.am  PNM-recordplugin.pd  recordPNM.cpp  recordPNM.h
plugins/PYLON/: README.txt  configure.ac  pylon.m4  videoPYLON.cpp  videoPYLON.h
plugins/QT4L/: Makefile.am  filmQT4L.cpp  filmQT4L.h  quicktime4linux-recordplugin.pd  recordQT4L.cpp  recordQT4L.h
plugins/QuickTime/: Makefile.am  QuickTime-filmplugin.pd  QuickTime-imageloaderplugin.pd  QuickTime-imagesaverplugin.pd  QuickTime-recordplugin.pd  filmQT.cpp  filmQT.h  imageQT.cpp  imageQT.h  recordQT.cpp  recordQT.h
plugins/SGI/: Makefile.am  imageSGI.cpp  imageSGI.h  sgi-imageloaderplugin.pd  sgi-imagesaverplugin.pd  sgiimage.cpp  sgiimage.h
plugins/STB/: Makefile.am  imageSTB.cpp  imageSTB.h  stb-imageloaderplugin.pd  stb-imagesaverplugin.pd
plugins/TEST/: Makefile.am  filmTEST.cpp  filmTEST.h  test-filmplugin.pd  test-videoplugin.pd  videoTEST.cpp  videoTEST.h
plugins/TIFF/: Makefile.am  imageTIFF.cpp  imageTIFF.h  tiff-imageloaderplugin.pd  tiff-imagesaverplugin.pd
plugins/UNICAP/: videoUNICAP.cpp  videoUNICAP.h
plugins/V4L/: Makefile.am  recordV4L.cpp  recordV4L.h  v4l-recordplugin.pd  videoV4L.cpp  videoV4L.h
plugins/V4L2/: Makefile.am  recordV4L2.cpp  recordV4L2.h  v4l2-recordplugin.pd  videoV4L2.cpp  videoV4L2.h
plugins/VFW/: Makefile.am  videoVFW.cpp  videoVFW.h
plugins/VIDS/: Makefile.am  VIDS-videoplugin.pd  videoVIDS.cpp  videoVIDS.h
plugins/VLC/: Makefile.am  videoVLC.cpp  videoVLC.h  vlc-videoplugin.pd
plugins/VNC/: videoVNC.cpp  videoVNC.h  vnc-videoplugin.pd
plugins/filmAVF/: AVFMoviePlayer.h  AVFMoviePlayer.m  Makefile.am  filmAVF.h  filmAVF.mm
plugins/filmAVFoundation/: AVFMoviePlayer.h  AVFMoviePlayer.m  Makefile.am  filmAVFoundation.h  filmAVFoundation.mm
plugins/filmAVI/: Makefile.am  filmAVI.cpp  filmAVI.h  filmAVI.vcproj
plugins/filmAVIPLAY/: Makefile.am  filmAVIPLAY.cpp  filmAVIPLAY.h
plugins/filmDS/: Makefile.am  README.txt  filmDS.cpp  filmDS.h  filmDS.vcproj  qedit.h
plugins/filmDSATL/: Makefile.am  filmDS.cpp  filmDS.h
plugins/filmDarwin/: Makefile.am  filmDarwin.cpp  filmDarwin.h
plugins/filmGMERLIN/: Makefile.am  filmGMERLIN.cpp  filmGMERLIN.h
plugins/filmMPEG1/: Makefile.am  filmMPEG1.cpp  filmMPEG1.h
plugins/filmMPEG3/: Makefile.am  filmMPEG3.cpp  filmMPEG3.h
plugins/filmQT/: Makefile.am  filmQT.cpp  filmQT.h  filmQT.vcproj
plugins/filmQT4L/: Makefile.am  filmQT4L.cpp  filmQT4L.h
plugins/filmTEST/: Makefile.am  filmTEST.cpp  filmTEST.h
plugins/imageIO/: Makefile.am  imageIO-imageloaderplugin.pd  imageIO-imagesaverplugin.pd  imageIO.h  imageIO.mm
plugins/imageJPEG/: Makefile.am  imageJPEG.cpp  imageJPEG.h  imageJPEG.vcproj
plugins/imageMAGICK/: MagickCore.cpp  MagickPlusPlus.cpp  Makefile.am  imageMAGICK.cpp  imageMAGICK.h  (+3 more)
src/: AMakefile.am  BUGS  Make.config.in  Make.include  Makefile  Makefile.am  Makefile.subdir  README.glew  README.linux  TODO  TODO.091  TODO.092  TODO.093  Version.cpp  acinclude.m4  aclocal.m4  autogen.sh  check-sources.mk  configure  configure.ac  gem.dsp  gem.vcproj  gem_vc6.dsw  gemversion.sh  generate_Makefile_am.sh  importGLEW.sh  mimetypes.txt  pkgversion.sh  pkgversion.txt  version.h.in
tools/: Makefile.am  glad2gem  indent.sh
(+3229 files in other folders)
